--- a/films.html
+++ b/films.html
@@ -27,10 +27,11 @@
       </header>
       <div class="main col row vert center">
         
-   
-        <h2>Our short films:</h2>
+        <body>
+        
         <div class="col row vert films wrap thin">
          <div class="col film row vert">
+           <h2>Our short films:</h2>
            <h1><strong>New!</strong>Drunk Police 2: The interrogation
            <iframe width="560" height="315" src="https://www.youtube.com/embed/Id8foaPBMiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            <h3>Drunk Police</h3>
@@ -43,5 +44,6 @@
           <footer class="footer col">
               <p>Copyright (c) 2020 NinjaJuce Productions</p>
            </footer>
+           </body>
   </body>
 </html>
