--- a/merch.html
+++ b/merch.html
@@ -37,8 +37,9 @@
           </p>
         </div>
       </div>
+      <br>
       <footer class="footer col">
-        
+      <p>Copyright (c) 2020 NinjaJuce Productions</p>  
       </footer>
     </div>
   </body>
