footer and copyright

--- a/animation.html
+++ b/animation.html
@@ -34,6 +34,9 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
   <h1>Ice punk</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZgBTkafX-JA" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-       </body>
+   <footer class "col">
+              <p>Copyright (c) 2020 NinjaJuce Productions</p>
+                    </footer>
+   </body>
    </html>
             
