--- a/team.html
+++ b/team.html
@@ -27,6 +27,8 @@
       </header>
       <div class="main col center">
         <h2><i> We are a film group based in Wellington</i></h2>
+        <p> WOM founder, filmmaker, and manager.</p>
+        <p>Edaz potato Co-website developer</p>
       </div>
           <br>
       <footer class="footer col">
