--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
      <style>
         p{
         font-family: helvetica;
-        color: green;
+        color: red;
         font-size: 20px;
           }
     </style>
@@ -38,7 +38,7 @@
       </div>
           <br>
       <footer class="footer col">
-          <p>Copyright (c) 2020 NinjaJuce Productions</p>
+          <p>Copyright (c) 2021 NinjaJuce Productions</p>
       </footer>
     </div>
   </body>
