--- a/donation/index.html
+++ b/donation/index.html
@@ -12,16 +12,12 @@ h1
 p
  {
   font-family: times new roman;
-   font-size: 35px;
-   color: black;
+   font-size: 25px;
+   color: blue;
   }
   </style>
   <h1> <strong>Hi I'm William. CEO and founder of Ninja juce productions.</strong></h1>
-<p> I hate ads. I find them really annoying. I have instead decided
-    to not have ads cover the content. So I put ads on the side of
-    my website or at the bottom. If you would like to get rid of 
-    ads I would really appreciate your support. If you donate to me
-    either on my patreon or on paypal. For paypal you don't have to pay 
-  anymore than $1 if you don't want to.</p>
+<p> I hate ads. Ads are a pain in the A** I get that. If you want to donate go to my buymeacoffee page. Each coffee is $4. Or my patreon. Your support will help me
+  create more good content.</p>
   </body>
 </html>
